fix for scrollbar appearing outside of Chrome

--- a/src/components/chat-area/chat-container.module.less
+++ b/src/components/chat-area/chat-container.module.less
@@ -8,6 +8,7 @@
 
   // horrible hack; flex-box with a dynamic size scrollable content with it depends on something around having explicit size
   height: calc(100vh - (@header-size + @footer-size + @chat-container-margin-size + @spacing-unit));
+  width: 25vw;
 
   display: grid;
   grid-template-columns: 1fr;
